Created entities and BookStoreDbContext

--- a/src/BookStore.API/appsettings.json
+++ b/src/BookStore.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=wo6-sql218\\courier;Initial Catalog=TorqueCourier_Dev;User ID = sa; password=T0rqu3_3u;Connect Timeout=999999999;",
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
